<?xml version="1.0"?>
<package format="3">
  <name>multibot2_msgs</name>
  <version>0.1.0</version>
  <description>
    Multi-Robot ROS2 message interface
  </description>
  <maintainer email="hchju777@korea.ac.kr">Changju Hwang</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>costmap_converter_msgs</depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>