<?xml version="1.0"?>
<package format="3">
  <name>multibot2_server</name>
  <version>0.3.0</version>
  <description>
    Multi-robot server
  </description>
  <maintainer email="hchju777@korea.ac.kr">Changju Hwang</maintainer>
  <license>GNU General Public License v3.0</license>

  <depend>costmap_converter</depend>
  <depend>costmap_converter_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt_build</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_server</depend>
  <depend>multibot2_msgs</depend>
  <depend>multibot2_util</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <exec_depend>libqt6-core</exec_depend>
  <exec_depend>libqt6-gui</exec_depend>
  <exec_depend>libqt6-opengl</exec_depend>
  <exec_depend>libqt6-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>