<?xml version="1.0"?>
<package format="3">
  <name>multibot2_util</name>
  <version>0.1.0</version>
  <description>
    Multi-robot Util
  </description>
  <maintainer email="hchju777@korea.ac.kr">Changju Hwang</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dwb_critics</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>multibot2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>